syntax = "proto3";

package proto;

import "ProtoMessage.proto";

service TransactionsService{
  rpc findTransactionsByPersonIdAndTime (FindTransactionsByPersonIdAndTimeRequest)
      returns (FindTransactionsByPersonIdAndTimeListResponse);
}
